--- a/composer.json
+++ b/composer.json
@@ -6,5 +6,8 @@
             "email": "sandorbalazszsolt@gmail.com"
         }
     ],
-    "require": {}
+    "require": {},
+    "autoload": {
+        "psr-4": { "": "src/" }
+    }
 }
